add field to choose player on fight stage
