# backend/CastleCommander.WebApi/CastleCommander.WebApi/swagger.json
@@ -383,6 +383,14 @@
               "type": "integer",
               "format": "int32"
             }
+          },
+          {
+            "name": "player",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
           }
         ],
         "responses": {
